[tool.poetry]
name = "lumina-core"
version = "0.1.0"
description = "Core library with shared functionality and database models for Lumina Python projects."
authors = ["Lukas Reiter <chopicalqui@protonmail.com>"]
license = "GPLv3"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {version = "0.115.4", extras = ["standard"]}
sqlmodel = "^0.0.22"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
redis = "^5.2.0"
logger = "^1.4"
asyncpg = "^0.30.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
